--- a/memeMe/Base.lproj/Main.storyboard
+++ b/memeMe/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,104 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="memeMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jUs-Zw-4Ki">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sce-Zq-SWx">
+                                <rect key="frame" x="0.0" y="84" width="414" height="728"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gun-zJ-n2q" userLabel="Top Text Field">
+                                <rect key="frame" x="40" y="129" width="334" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Ez0-Pk-mCv"/>
+                                </constraints>
+                                <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FFD-ak-AQK" userLabel="Bottom Text Field">
+                                <rect key="frame" x="40" y="727" width="334" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="gVr-Fd-zQi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vY7-HQ-o4Y" userLabel="Bottom Toolbar">
+                                <rect key="frame" x="0.0" y="812" width="414" height="50"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="qp9-O6-VI3"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="GbW-Dj-hBx"/>
+                                    <barButtonItem systemItem="camera" id="qmf-cU-7uw">
+                                        <connections>
+                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="aQr-1v-X1l"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="o11-IM-oEw"/>
+                                    <barButtonItem tag="1" systemItem="add" id="vg7-f9-3Eo">
+                                        <connections>
+                                            <action selector="pickAnImageFromAlbum:" destination="BYZ-38-t0r" id="2GK-Ql-rn5"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="tWo-97-21p"/>
+                                </items>
+                            </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xlN-wo-kQM" userLabel="Top Toolbar">
+                                <rect key="frame" x="0.0" y="44" width="414" height="40"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Pk5-G7-ccX"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="action" id="f6z-63-xwA">
+                                        <connections>
+                                            <action selector="shareMeme:" destination="BYZ-38-t0r" id="Tjs-Dp-j7A"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vY7-HQ-o4Y" firstAttribute="leading" secondItem="jUs-Zw-4Ki" secondAttribute="leading" id="1Ib-Su-rL8"/>
+                            <constraint firstItem="sce-Zq-SWx" firstAttribute="top" secondItem="xlN-wo-kQM" secondAttribute="bottom" id="4vS-T0-buv"/>
+                            <constraint firstItem="Gun-zJ-n2q" firstAttribute="top" secondItem="xlN-wo-kQM" secondAttribute="bottom" constant="45" id="6ie-AX-aZq"/>
+                            <constraint firstItem="R7T-Fj-NuB" firstAttribute="top" secondItem="xlN-wo-kQM" secondAttribute="top" id="Ak5-3V-QvI"/>
+                            <constraint firstItem="vY7-HQ-o4Y" firstAttribute="bottom" secondItem="R7T-Fj-NuB" secondAttribute="bottom" id="BPv-Sh-Q9E"/>
+                            <constraint firstItem="FFD-ak-AQK" firstAttribute="leading" secondItem="R7T-Fj-NuB" secondAttribute="leading" constant="40" id="EFf-qf-IU0"/>
+                            <constraint firstItem="R7T-Fj-NuB" firstAttribute="trailing" secondItem="FFD-ak-AQK" secondAttribute="trailing" constant="40" id="EeI-XY-ciM"/>
+                            <constraint firstAttribute="trailing" secondItem="xlN-wo-kQM" secondAttribute="trailing" id="IfO-hH-LJ7"/>
+                            <constraint firstItem="sce-Zq-SWx" firstAttribute="leading" secondItem="jUs-Zw-4Ki" secondAttribute="leading" id="Y40-3E-0qi"/>
+                            <constraint firstAttribute="trailing" secondItem="vY7-HQ-o4Y" secondAttribute="trailing" id="e5m-fr-jOq"/>
+                            <constraint firstAttribute="trailing" secondItem="sce-Zq-SWx" secondAttribute="trailing" id="frS-16-i7K"/>
+                            <constraint firstItem="xlN-wo-kQM" firstAttribute="leading" secondItem="jUs-Zw-4Ki" secondAttribute="leading" id="gfh-ey-tGo"/>
+                            <constraint firstItem="R7T-Fj-NuB" firstAttribute="trailing" secondItem="Gun-zJ-n2q" secondAttribute="trailing" constant="40" id="mRN-9E-HhP"/>
+                            <constraint firstItem="Gun-zJ-n2q" firstAttribute="leading" secondItem="R7T-Fj-NuB" secondAttribute="leading" constant="40" id="nia-1P-LTT"/>
+                            <constraint firstItem="vY7-HQ-o4Y" firstAttribute="top" secondItem="sce-Zq-SWx" secondAttribute="bottom" id="nku-yZ-FGf"/>
+                            <constraint firstItem="vY7-HQ-o4Y" firstAttribute="top" secondItem="FFD-ak-AQK" secondAttribute="bottom" constant="45" id="xjN-ck-aaE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="R7T-Fj-NuB"/>
                     </view>
+                    <connections>
+                        <outlet property="buttomTextField" destination="FFD-ak-AQK" id="pWr-3Y-1HM"/>
+                        <outlet property="buttomToolbar" destination="vY7-HQ-o4Y" id="HqU-0e-uT4"/>
+                        <outlet property="imageView" destination="sce-Zq-SWx" id="aIK-j7-FD5"/>
+                        <outlet property="memeImageView" destination="sce-Zq-SWx" id="HZv-Zr-uD4"/>
+                        <outlet property="pickFromAlbom" destination="vg7-f9-3Eo" id="r7G-n8-fzy"/>
+                        <outlet property="pickFromCamira" destination="qmf-cU-7uw" id="v5G-uO-qiZ"/>
+                        <outlet property="shareButton" destination="f6z-63-xwA" id="cwG-4K-s8b"/>
+                        <outlet property="topTextField" destination="Gun-zJ-n2q" id="Frq-LW-2f6"/>
+                        <outlet property="topToolbar" destination="xlN-wo-kQM" id="HH6-RY-iKW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="115"/>
         </scene>
     </scenes>
 </document>
